@@ -1961,6 +1961,31 @@
             },
          ],
       },
+      {  name => 'InnoDB Checkpoint Age',
+         base_value => '1024',
+         hash  => 'hash_00_VER_c9c021f3f9c5e962c4e202737884775c',
+         dt         => {
+            input => 'Get MySQL Stats',
+            hash  => 'hash_01_VER_518d88aa79345bac2d19a4fcd679b689',
+            uncheckpointed_bytes => {
+               data_source_type_id => '1',
+               hash => 'hash_08_VER_779563a68e56e67cacaf16a3f9181d26',
+            },
+         },
+         items => [
+            {  color  => '661100',
+               hashes => [
+                  'hash_10_VER_c5aa52bf7bb2be7caafc0a240badcb6f',
+                  'hash_10_VER_ffcaf8999b3c538e2255f270b277f403',
+                  'hash_10_VER_2a4b2f4e246f52587119e48150015af6',
+                  'hash_10_VER_f1de18e0c7b05eab75a4665e8415aeaf',
+               ],
+               item => 'uncheckpointed_bytes',
+               task => 'hash_09_VER_09b406f04e832260b6a92b3c6bb51bb7',
+               type => 'LINE1',
+            },
+         ],
+      },
       {  base_value => '1000',
          name       => 'MySQL Processlist',
          hash       => 'hash_00_VER_f979e60cec40499495c8f9a0739db4dd',
