@@ -35,50 +35,52 @@ is(
 is_deeply(
    get_innodb_array(file_get_contents('samples/innodb-001.txt')),
    array(
-       'spin_waits'                => '8317256878',
-       'spin_rounds'               => '247280272495',
-       'os_waits'                  => '1962880678',
-       'innodb_transactions'       => '1170664159',
-       'unpurged_txns'             => '306',
-       'history_list'              => '9',
-       'current_transactions'      => '36',
-       'pending_normal_aio_reads'  => '0',
-       'pending_normal_aio_writes' => '0',
-       'pending_ibuf_aio_reads'    => '0',
-       'pending_aio_log_ios'       => '0',
-       'pending_aio_sync_ios'      => '0',
-       'pending_log_flushes'       => '0',
-       'pending_buf_pool_flushes'  => '0',
-       'file_reads'                => '5985113',
-       'file_writes'               => '633045221',
-       'file_fsyncs'               => '537534629',
-       'ibuf_inserts'              => '19817685',
-       'ibuf_merged'               => '19817684',
-       'ibuf_merges'               => '3552620',
-       'innodb_lsn'                => '540805326864',
-       'unflushed_log'             => '0',
-       'flushed_to'                => '540805326864',
-       'pending_log_writes'        => '0',
-       'pending_chkp_writes'       => '0',
-       'log_writes'                => '520835887',
-       'pool_size'                 => '720896',
-       'free_pages'                => '0',
-       'database_pages'            => '638423',
-       'modified_pages'            => '118',
-       'pages_read'                => '28593890',
-       'pages_created'             => '5375161',
-       'pages_written'             => '154670836',
-       'queries_inside'            => '0',
-       'queries_queued'            => '0',
-       'read_views'                => '1',
-       'rows_inserted'             => '544159502',
-       'rows_updated'              => '355138902',
-       'rows_deleted'              => '50580680',
-       'rows_read'                 => '1911833505287',
-       'hash_index_cells_total'    => '23374853',
-       'hash_index_cells_used'     => '21238151',
-       'total_mem_alloc'           => '13102052218',
-       'additional_pool_alloc'     => '1048576',
+      'spin_waits'                => '8317256878',
+      'spin_rounds'               => '247280272495',
+      'os_waits'                  => '1962880678',
+      'innodb_transactions'       => '1170664159',
+      'unpurged_txns'             => '306',
+      'history_list'              => '9',
+      'current_transactions'      => '36',
+      'pending_normal_aio_reads'  => '0',
+      'pending_normal_aio_writes' => '0',
+      'pending_ibuf_aio_reads'    => '0',
+      'pending_aio_log_ios'       => '0',
+      'pending_aio_sync_ios'      => '0',
+      'pending_log_flushes'       => '0',
+      'pending_buf_pool_flushes'  => '0',
+      'file_reads'                => '5985113',
+      'file_writes'               => '633045221',
+      'file_fsyncs'               => '537534629',
+      'ibuf_inserts'              => '19817685',
+      'ibuf_merged'               => '19817684',
+      'ibuf_merges'               => '3552620',
+      'innodb_lsn'                => '540805326864',
+      'unflushed_log'             => '0',
+      'flushed_to'                => '540805326864',
+      'pending_log_writes'        => '0',
+      'pending_chkp_writes'       => '0',
+      'log_writes'                => '520835887',
+      'pool_size'                 => '720896',
+      'free_pages'                => '0',
+      'database_pages'            => '638423',
+      'modified_pages'            => '118',
+      'pages_read'                => '28593890',
+      'pages_created'             => '5375161',
+      'pages_written'             => '154670836',
+      'queries_inside'            => '0',
+      'queries_queued'            => '0',
+      'read_views'                => '1',
+      'rows_inserted'             => '544159502',
+      'rows_updated'              => '355138902',
+      'rows_deleted'              => '50580680',
+      'rows_read'                 => '1911833505287',
+      'hash_index_cells_total'    => '23374853',
+      'hash_index_cells_used'     => '21238151',
+      'total_mem_alloc'           => '13102052218',
+      'additional_pool_alloc'     => '1048576',
+      'last_checkpoint'           => '540805205461',
+      'uncheckpointed_bytes'      => '121403',
    ),
    'samples/innodb-001.txt'
 );
@@ -130,7 +132,9 @@ is_deeply(
       'hash_index_cells_used'     => 0,
       'total_mem_alloc'           => '29642194944',
       'additional_pool_alloc'     => '0',
-      ),
+      'last_checkpoint'           => '13093217877062',
+      'uncheckpointed_bytes'      => '731618794',
+   ),
    'samples/innodb-002.txt'
 );
 
@@ -184,6 +188,8 @@ is_deeply(
       'hash_index_cells_used'     => '0',
       'total_mem_alloc'           => '20557306',
       'additional_pool_alloc'     => '744704',
+      'last_checkpoint'           => '103216',
+      'uncheckpointed_bytes'      => '0',
    ),
    'samples/innodb-006.txt'
 );
